--- a/EmpModule/webapp/index.html
+++ b/EmpModule/webapp/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>SAP Cloud Platform - Employee Demo</title>
+		<title>SAP Business Technology Platform - Employee Demo</title>
 		<script id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_belize"
