supress favicon error

--- a/EmpModule/webapp/index.html
+++ b/EmpModule/webapp/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="#" />
 		<title>SAP Business Technology Platform - Employee Demo</title>
 		<script id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
